--- a/src/components/Home/PokemonList/css/PokemonList.css
+++ b/src/components/Home/PokemonList/css/PokemonList.css
@@ -2,8 +2,20 @@
   grid-template-columns: 1fr;
   row-gap: 30px;
   padding-top: 70px;
+  padding-bottom: 30px;
   place-items: center;
-  min-height: calc(100vh - 120px);
+  min-height: calc(100vh - 92px);
+}
+
+.pokemon-list .load-more-button {
+  border-radius: 6px;
+  width: 160px;
+  background-color: var(--pokeball-red);
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff;
+  font-size: 18px;
+  padding: 13px;
 }
 
 @media screen and (min-width: 768px) {
