--- a/src/components/PC/css/PCScreen.css
+++ b/src/components/PC/css/PCScreen.css
@@ -1,7 +1,7 @@
 .pc-screen {
   padding: 100px 0 0;
   min-height: 100vh;
-  background-color: cadetblue;
+  background-color: var(--primary-blue);
 }
 
 .pc-screen .pokemon-wrapper {
@@ -19,11 +19,11 @@
   text-align: center;
   max-width: 320px;
   padding: 8px;
+  font-weight: 600;
   text-transform: uppercase;
-  color: #333;
-  border-radius: var(--b-radius);
-  background-color: cadetblue;
-  box-shadow: var(--shadow);
+  color: var(--primary-yellow);
+  border-radius: 6px;
+  box-shadow: 0px 3px 1px 6px rgba(0, 0, 0, 0.5);
 }
 
 @media screen and (min-width: 480px) {
@@ -89,10 +89,5 @@
 @media screen and (min-width: 1380px) {
   .pc-screen .pokemon-wrapper {
     grid-template-columns: repeat(15, 60px);
-  }
-}
-@media screen and (min-width: 1440px) {
-  .pc-screen .pokemon-wrapper {
-    grid-template-columns: repeat(16, 60px);
   }
 }
